--- a/StudentDiary.Presentation/Views/_ViewImports.cshtml
+++ b/StudentDiary.Presentation/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
-﻿@using StudentDiary.Presentation
+@using StudentDiary.Presentation
 @using StudentDiary.Presentation.Models
+@using StudentDiary.Services.DTOs
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
